--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,60 @@
-@import url(style.css);
+@import url(variables.css);
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto Slab', sans-serif;
+}
+.allpage{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+header{
+    position: absolute;
+    width: 100%;
+    height: 5vh;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 2;
+}
+nav ul, a {
+    list-style: none;
+    text-decoration: none;
+    color: var(--color-font);
+    display: flex;
+    justify-content: space-around;
+}
+.article{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.article img{
+    width: auto;
+    height: 40vh;
+}
+.fondo1{
+    position: absolute;
+    background-image: url(/storage/img/placeYourImageHere0.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+.fondo1::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #323239; /* Color del polarizado */
+    opacity: 0.8; /* Ajusta la opacidad según tus preferencias */
+}
