--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     font-weight: bold;
     /* border: solid 1px; */
 }
-.allpage, body{
+body{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -27,23 +27,33 @@ header{
     align-items: center;
     z-index: 2;
 }
-header img{
-    width: 5em;
-    height: 4.5em;
-    margin-left: 2em;
-    margin-right: 2em;
+.logomenu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.menu, nav, ul, a {
-    list-style: none;
-    text-decoration: none;
-    color: var(--color-font);
+.logomenu img{
+    object-fit: contain;
+}
+header .menu{
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-
+ul{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    width: 100%;
+    height: 100%;
+    
+}
+a{
+    text-decoration: none;
+    color: var(--color-font);
+}
 a:hover{
     color: var(--color-primary);
 }
@@ -54,9 +64,11 @@ a:hover{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100vh;
     color: var(--color-font);
+    padding: 8em;
 }
 .orange{
     color: var(--color-primary);
@@ -64,38 +76,32 @@ a:hover{
     font-size: 3em;
 }
 
-.article img{
-    width: auto;
-    height: 30vh;
+.img1 img{
+    object-fit: contain;
     margin-right: 2em;
     margin-left: 4em;
 }
 
 .fondo1{
     position: absolute;
-    background-image: url(/storage/img/placeYourImageHere0.png);
+    background-image: linear-gradient(var(--color-banner),var(--color-banner)),url(/storage/img/placeYourImageHere0.png);
     width: 100vw;
     height: 100vh;
     background-size: cover;
 }
-.fondo1::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #323239; /* Color del polarizado */
-    opacity: .93; /* Ajusta la opacidad según tus preferencias */
-}
+
 .info{
     display: flex;
     flex-direction: column;
     align-items: start;
     margin-left: 2em;
-    margin-right: 4em;
+    margin-right: 6em;
 }
+p{
+    margin-top: .9em;
+    margin-bottom: .9em;
 
+}
 button{
     color: var(--color-secundary);
     font-size: 1em;
@@ -110,5 +116,68 @@ button{
     position: relative;
     width: 100vw;
     height: 100vh;
-    background-color: var(--color-ternario);
+    background-color: var(--color-secundary);
+}
+.section3{
+    position: relative;
+    width: 100vw;
+    height: 200vh;
+    background-color: var(--color-secundary);
+    overflow: hidden;
+}
+.franja{
+    position: absolute;
+    background-image: url(/storage/img/placeYourImageHereFood.png);
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 0; 
+}
+.plato1{
+    width: 100em;
+    position: absolute;
+    top: 62%;
+    left: -80px;
+    z-index: 1;
+}
+.plato1 img{
+    object-fit: contain;
+}
+.plato2{
+    position: absolute;
+    right: 0;
+    top: 3%;
+    z-index: 1;
+}
+.plato2 img{
+    object-fit: contain;
+}
+.plato3{
+    position: absolute;
+    right: 0;
+    top: 40%;
+    z-index: 1;
+}
+.plato3 img{
+    width: 990px;
+    height: 100%;
+    object-fit: contain;
+}
+.info3{
+    position: relative;
+    z-index: 1;
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    font-size: 1.8vw;
+    width: 50%;
+    color: var(--color-font);
+    padding: 3em;
+    margin: 3.8em;
+    top: 15%;
+    right: 5%;
 }
