--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(variables.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: "Roboto Slab", serif;
     font-optical-sizing: auto;
@@ -19,11 +19,11 @@ body{
 }
 header{
     position: fixed;
-    width: 100vw;
+    width: 99%;
     height: 5vh;
     padding: 4em;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     z-index: 2;
 }
@@ -42,9 +42,10 @@ header .menu{
     justify-content: space-around;
     align-items: center;
 }
-ul{
+.menu ul{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
     width: 100%;
     height: 100%;
@@ -96,6 +97,9 @@ a:hover{
     align-items: start;
     margin-left: 2em;
     margin-right: 6em;
+}
+.info h1{
+    background: none;
 }
 p{
     margin-top: .9em;
@@ -180,4 +184,167 @@ button{
     margin: 3.8em;
     top: 15%;
     right: 5%;
+}
+.gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--color-secundary);
+}
+
+.gallery h1 {
+    color: var(--color-font);
+    font-size: 3em;
+    margin: 8% 0 4% 0;
+}
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 200px;
+}
+.images img {
+    margin: 1.5%;
+    width: 25%;
+}
+
+/* Enjoy */
+.enjoy {
+    /* margin-top: 10%; */
+    position: relative;
+}
+
+.fondo-enj {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+.fondo-enj img {
+    position: absolute;
+    width: 100vw;
+    height: 131vh;
+    object-fit: cover;
+}
+.enj-txt {
+    position: absolute;
+    color: var(--color-font);
+    border: 10px solid var(--color-primary);
+    width: 50%;
+    height: 100%;
+    margin: auto;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: max-content;
+    font-size: 3em;
+    padding: 5%;
+    text-align: center;
+    font-weight: bolder;
+}
+.enj-txt h1 {
+    margin-bottom: 35px;
+}
+
+/* Menu */
+
+.menu {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    color: var(--color-font);
+    background-color: var(--color-secundary);
+}
+.menu h1 {
+    margin-top: 40px;
+    margin-bottom: 5%;
+    font-size: 3em;
+}
+.menu:last-child {
+    align-items: center;
+}
+.cont-men {
+    display: flex;
+    justify-content: center;
+    font-weight: bolder;
+    margin: 0 5%;
+}
+
+.img-men-1 img,
+.img-men-2 img,
+.img-men-3 img {
+    width: 25vw;
+}
+
+.img-men-1 h3, h4,
+.img-men-2 h3, h4,
+.img-men-3 h3, h4 {
+    margin: 15px 0;
+    font-size: 2em;
+    color: var(--color-primary);
+}
+.img-men-1 p,
+.img-men-2 p,
+.img-men-3 p {
+    font-size: x-large;
+    width: 75%;
+}
+
+/* Footer */
+footer {
+    position: relative;
+}
+.orange {
+    background: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: var(--color-font);
+}
+.fnl-txt {
+    width: 25%;
+    font-weight: bolder;
+    font-size: xx-large;
+    padding: 15vh 0;
+}
+.orange img  {
+    width: 40%;
+}
+
+.social-media {
+    background: var(--color-ternario);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4% 0;
+}
+
+.social-media img {
+    width: 15%;
+    margin-bottom: 2%;
+}
+
+.social-media nav {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin-bottom: 2%;
+}
+
+.social-media nav a {
+    text-decoration: none;
+    color: var(--color-font);
+}
+
+.social{
+    font-size: 30px;
+    color: white;
 }
